[package]
name = "ar5iv-util"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "create_list_of_local_ids"
path = "bin/create_list_of_local_ids.rs"

[[bin]]
name = "latest_versions_from_snapshot"
path = "bin/latest_versions_from_snapshot.rs"

[[bin]]
name = "update_arxiv_sources"
path = "bin/update_arxiv_sources.rs"

[[bin]]
name = "cron_update"
path = "bin/cron_update.rs"

[dependencies.libarchive-sys]
git = "https://github.com/dginev/libarchive-sys.git"

[dependencies]
rayon="1.5"
jwalk="0.6.0"
reqwest = { version = "0.11", features = ["blocking"] }
lazy_static = "1.4"
regex = "1.7"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.87"
libxml = "0.3.1"
once_cell = "1.18"